[package]
name = "sample-rust-wasm"
version = "0.0.0"
authors = ["Makoto Takahashi <takahashi-makoto@toma.co.jp>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.60"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"

[profile.release]
opt-level = "s"
